// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get dependency from clean state 1`] = `
Object {
  "name": "json",
  "range": Array [
    "^2",
  ],
  "registered": Array [
    Object {
      "dependencies": Array [
        Object {
          "name": "dictionary",
          "registry": "vba-blocks",
          "version": "^1",
        },
      ],
      "id": "json@1.0.3",
      "name": "json",
      "source": "registry+vba-blocks#d43b1724178c15181b3125f03591c0857743808395fc483d1da4210d0c9934ca",
      "version": "1.0.3",
    },
    Object {
      "dependencies": Array [
        Object {
          "name": "dictionary",
          "registry": "vba-blocks",
          "version": "^1",
        },
      ],
      "id": "json@2.0.1",
      "name": "json",
      "source": "registry+vba-blocks#5e2d5f3fad7bf216e9c6a5089ce43b1bd72c0ae0b03f7dc841ed3274cbb074cc",
      "version": "2.0.1",
    },
    Object {
      "dependencies": Array [
        Object {
          "name": "dictionary",
          "registry": "vba-blocks",
          "version": "^1",
        },
      ],
      "id": "json@2.1.0",
      "name": "json",
      "source": "registry+vba-blocks#92b15892bfac833b89269c5f1f4c55f75430e407ed5a83b7695f1610c08a48c9",
      "version": "2.1.0",
    },
    Object {
      "dependencies": Array [
        Object {
          "name": "dictionary",
          "registry": "vba-blocks",
          "version": "^1",
        },
      ],
      "id": "json@2.2.4",
      "name": "json",
      "source": "registry+vba-blocks#0bdffb250e70366bb165843a4983bfafdb4b42bdeb853cbbc7994787ff48e908",
      "version": "2.2.4",
    },
    Object {
      "dependencies": Array [
        Object {
          "name": "dictionary",
          "registry": "vba-blocks",
          "version": "^1",
        },
      ],
      "id": "json@2.3.0",
      "name": "json",
      "source": "registry+vba-blocks#42372ab20cd42fc364b68207c17cf063f267abd3d3ec738315b00b25fb7c690f",
      "version": "2.3.0",
    },
  ],
}
`;

exports[`should get dependency with existing 1`] = `
Object {
  "name": "json",
  "range": Array [
    "^2",
  ],
  "registered": Array [],
}
`;

exports[`should get registration 1`] = `
Object {
  "dependencies": Array [
    Object {
      "name": "dictionary",
      "registry": "vba-blocks",
      "version": "^1",
    },
  ],
  "id": "json@2.0.1",
  "name": "json",
  "source": "registry+vba-blocks#5e2d5f3fad7bf216e9c6a5089ce43b1bd72c0ae0b03f7dc841ed3274cbb074cc",
  "version": "2.0.1",
}
`;

exports[`should include preferred with resolved 1`] = `
Object {
  "name": "json",
  "preferred": Object {
    "dependencies": Array [
      Object {
        "name": "dictionary",
        "registry": "vba-blocks",
        "version": "^1",
      },
    ],
    "id": "json@2.0.1",
    "name": "json",
    "source": "registry+vba-blocks#<hash>",
    "version": "2.0.1",
  },
  "range": Array [
    "^2",
  ],
  "registered": Array [
    Object {
      "dependencies": Array [
        Object {
          "name": "dictionary",
          "registry": "vba-blocks",
          "version": "^1",
        },
      ],
      "id": "json@1.0.3",
      "name": "json",
      "source": "registry+vba-blocks#d43b1724178c15181b3125f03591c0857743808395fc483d1da4210d0c9934ca",
      "version": "1.0.3",
    },
    Object {
      "dependencies": Array [
        Object {
          "name": "dictionary",
          "registry": "vba-blocks",
          "version": "^1",
        },
      ],
      "id": "json@2.0.1",
      "name": "json",
      "source": "registry+vba-blocks#5e2d5f3fad7bf216e9c6a5089ce43b1bd72c0ae0b03f7dc841ed3274cbb074cc",
      "version": "2.0.1",
    },
    Object {
      "dependencies": Array [
        Object {
          "name": "dictionary",
          "registry": "vba-blocks",
          "version": "^1",
        },
      ],
      "id": "json@2.1.0",
      "name": "json",
      "source": "registry+vba-blocks#92b15892bfac833b89269c5f1f4c55f75430e407ed5a83b7695f1610c08a48c9",
      "version": "2.1.0",
    },
    Object {
      "dependencies": Array [
        Object {
          "name": "dictionary",
          "registry": "vba-blocks",
          "version": "^1",
        },
      ],
      "id": "json@2.2.4",
      "name": "json",
      "source": "registry+vba-blocks#0bdffb250e70366bb165843a4983bfafdb4b42bdeb853cbbc7994787ff48e908",
      "version": "2.2.4",
    },
    Object {
      "dependencies": Array [
        Object {
          "name": "dictionary",
          "registry": "vba-blocks",
          "version": "^1",
        },
      ],
      "id": "json@2.3.0",
      "name": "json",
      "source": "registry+vba-blocks#42372ab20cd42fc364b68207c17cf063f267abd3d3ec738315b00b25fb7c690f",
      "version": "2.3.0",
    },
  ],
}
`;

exports[`should iterate through graph entries 1`] = `
Array [
  Array [
    "json",
    Object {
      "name": "json",
      "range": Array [
        "^2",
      ],
      "registered": Array [
        Object {
          "dependencies": Array [
            Object {
              "name": "dictionary",
              "registry": "vba-blocks",
              "version": "^1",
            },
          ],
          "id": "json@1.0.3",
          "name": "json",
          "source": "registry+vba-blocks#d43b1724178c15181b3125f03591c0857743808395fc483d1da4210d0c9934ca",
          "version": "1.0.3",
        },
        Object {
          "dependencies": Array [
            Object {
              "name": "dictionary",
              "registry": "vba-blocks",
              "version": "^1",
            },
          ],
          "id": "json@2.0.1",
          "name": "json",
          "source": "registry+vba-blocks#5e2d5f3fad7bf216e9c6a5089ce43b1bd72c0ae0b03f7dc841ed3274cbb074cc",
          "version": "2.0.1",
        },
        Object {
          "dependencies": Array [
            Object {
              "name": "dictionary",
              "registry": "vba-blocks",
              "version": "^1",
            },
          ],
          "id": "json@2.1.0",
          "name": "json",
          "source": "registry+vba-blocks#92b15892bfac833b89269c5f1f4c55f75430e407ed5a83b7695f1610c08a48c9",
          "version": "2.1.0",
        },
        Object {
          "dependencies": Array [
            Object {
              "name": "dictionary",
              "registry": "vba-blocks",
              "version": "^1",
            },
          ],
          "id": "json@2.2.4",
          "name": "json",
          "source": "registry+vba-blocks#0bdffb250e70366bb165843a4983bfafdb4b42bdeb853cbbc7994787ff48e908",
          "version": "2.2.4",
        },
        Object {
          "dependencies": Array [
            Object {
              "name": "dictionary",
              "registry": "vba-blocks",
              "version": "^1",
            },
          ],
          "id": "json@2.3.0",
          "name": "json",
          "source": "registry+vba-blocks#42372ab20cd42fc364b68207c17cf063f267abd3d3ec738315b00b25fb7c690f",
          "version": "2.3.0",
        },
      ],
    },
  ],
]
`;
